@@ -1437,3 +1437,9 @@ Corrected longitudinal design with one group in VBM8-Manual. The first main
 effect "2" was missing.
 ------------------------------------------------------------------------
 r434 | gaser | 2011-10-10 22:46:10
+
+M       cg_vbm8_write.m
+
+Use old skull-stripping approach if graph-cut skull-stripping fails.
+------------------------------------------------------------------------
+r435 | gaser | 2011-12-06 12:37:54
